--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Flip It</title>
-                   
-    </head>
-    <body>
-        hello
 
+<head>
+    <title>Flip It</title>
+</head>
+
+<body ng-app="app">
+    <flipit-home></flipit-home>
+    <!-- Libraries -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+        crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.min.js"></script>
+        <!-- Application Code -->
         <script src="./app/app.js"></script>
-    </body>
+        <script src="./app/app.config.js"></script>
+        <script src="./app/directives/app.directives.module.js"></script>
+        <script src="./app/directives/home/home.module.js"></script>
+        <script src="./app/directives/home/home.controller.js"></script>
+        <script src="./app/directives/home/home.directive.js"></script>
+</body>
+
 </html>
