--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
         <!-- Application Code -->
         <script src="./app/app.js"></script>
+        <!-- Load Modules -->
         <script src="./app/directives/app.directives.module.js"></script>
+        <script src="./app/services/app.services.module.js"></script>
+        <!-- Load Scripts -->
         <script src="./app/directives/home/home.controller.js"></script>
         <script src="./app/directives/home/home.directive.js"></script>
+        <script src="./app/services/flipit/flipit.service.js"></script>
+        <script src="./app/services/constants.js"></script>
 </body>
 
 </html>
