--- a/app/directives/home/home.template.html
+++ b/app/directives/home/home.template.html
@@ -6,13 +6,13 @@
         <th>Revenue</th>
         <th>Demand Quanity</th>
         <th>Demand Percentage</th>
-        <tr ng-repeat="item in home.trendingItems">
+        <tr ng-repeat="item in home.allItems">
             <td>{{item.name}}</td>
             <td>{{item.buyingPrice}}</td>
             <td>{{item.sellingPrice}}</td>
             <td>{{item.revenue}}</td>
             <td>{{item.demandQuantity}}</td>
-            <td>{{item.demandPercentage}}</td>
+            <td>{{item.demandPercentage | number: 2}}</td>
         </tr>
     </table>
 </div>
