--- a/app/directives/home/home.template.html
+++ b/app/directives/home/home.template.html
@@ -8,8 +8,8 @@
         <th>Demand Percentage</th>
         <tr ng-repeat="item in home.allItems">
             <td>{{item.name}}</td>
-            <td>{{item.buyingPrice}}</td>
-            <td>{{item.sellingPrice}}</td>
+            <td>{{item.buyPrice}}</td>
+            <td>{{item.sellPrice}}</td>
             <td>{{item.revenue}}</td>
             <td>{{item.demandQuantity}}</td>
             <td>{{item.demandPercentage | number: 2}}</td>
