--- a/app/directives/home/home.template.html
+++ b/app/directives/home/home.template.html
@@ -1,5 +1,5 @@
-<div ng-controller="HomeController as home">
-    <table>
+<div ng-controller="HomeController as home" class="table-responsive">
+    <table class="table">
         <th>Item Name</th>
         <th>Buying Price</th>
         <th>Selling Price</th>
