--- a/index.html
+++ b/index.html
@@ -2,25 +2,33 @@
 <html>
 
 <head>
-    <title>Flip It</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+            crossorigin="anonymous">
+            <title>Flip It</title>
 </head>
 
 <body ng-app="app">
     <flipit-home></flipit-home>
     <!-- Libraries -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
-        <!-- Application Code -->
-        <script src="./app/app.js"></script>
-        <!-- Load Modules -->
-        <script src="./app/directives/app.directives.module.js"></script>
-        <script src="./app/services/app.services.module.js"></script>
-        <!-- Load Scripts -->
-        <script src="./app/directives/home/home.controller.js"></script>
-        <script src="./app/directives/home/home.directive.js"></script>
-        <script src="./app/services/flipit/flipit.service.js"></script>
-        <script src="./app/services/constants.js"></script>
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+            crossorigin="anonymous"></script>
+            <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+            <!-- Application Code -->
+            <script src="./app/app.js"></script>
+            <!-- Load Modules -->
+            <script src="./app/directives/app.directives.module.js"></script>
+            <script src="./app/services/app.services.module.js"></script>
+            <!-- Load Scripts -->
+            <script src="./app/directives/home/home.controller.js"></script>
+            <script src="./app/directives/home/home.directive.js"></script>
+            <script src="./app/services/flipit/flipit.service.js"></script>
+            <script src="./app/services/constants.js"></script>
 </body>
 
 </html>
