--- a/app/directives/home/home.template.html
+++ b/app/directives/home/home.template.html
@@ -6,7 +6,7 @@
         <th>Revenue</th>
         <th>Demand Quanity</th>
         <th>Demand Percentage</th>
-        <tr ng-repeat="item in home.allItems">
+        <tr ng-repeat="item in home.pageItems">
             <td>{{item.name}}</td>
             <td>{{item.buyPrice}}</td>
             <td>{{item.sellPrice}}</td>
