--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
         <!-- Optional theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
             crossorigin="anonymous">
+            <link rel="stylesheet" href="./styles/stylesheet.css">
             <title>Flip It</title>
 </head>
 
 <body ng-app="app">
-    <flipit-home></flipit-home>
+    <div class="page-header">
+        <h1>(┛◉Д◉)┛彡┻━┻ Flip It (┛◉Д◉)┛彡┻━┻</h1>
+    </div>
+    <div>
+        <flipit-home></flipit-home>
+    </div>
     <!-- Libraries -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
