--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body ng-app="app">
-    <div class="page-header">
+    <div class="page-header text-center">
         <h1>(┛◉Д◉)┛彡┻━┻ Flip It (┛◉Д◉)┛彡┻━┻</h1>
     </div>
     <div>
