--- a/app/directives/home/home.template.html
+++ b/app/directives/home/home.template.html
@@ -1,5 +1,5 @@
 <div ng-controller="HomeController as home">
-    <div class="form-group">
+    <div class="form-group input-sizing">
         <input ng-model="searchText" class="form-control" placeholder="Search">
     </div>
     <div class="table-responsive table-sizing">
