--- a/app/directives/home/home.template.html
+++ b/app/directives/home/home.template.html
@@ -9,9 +9,9 @@
             <th>Buying Price</th>
             <th>Selling Price</th>
             <th>Revenue</th>
-            <th>Demand Quanity</th>
+            <th>Surplus Demand</th>
             <th>Demand Percentage</th>
-            <tr ng-repeat="item in home.allItems| filter: searchText | orderBy: ['-revenue', '-demandQuantity']">
+            <tr ng-repeat="item in home.allItems| filter: searchText | orderBy: ['-revenue', '-demandQuantity']" ng-hide="revenue == 'Insufficient Data' || demandQuantity == 'Insufficient Data'">
                 <td>{{item.id}}</td>
                 <td>{{item.name}}</td>
                 <td>{{item.buyPrice}} G</td>
