--- a/app/directives/home/home.template.html
+++ b/app/directives/home/home.template.html
@@ -11,7 +11,7 @@
             <th>Revenue</th>
             <th>Surplus Demand</th>
             <th>Demand Percentage</th>
-            <tr ng-repeat="item in home.allItems| filter: searchText | orderBy: ['-revenue', '-demandQuantity']" ng-hide="revenue == 'Insufficient Data' || demandQuantity == 'Insufficient Data'">
+            <tr ng-repeat="item in home.allItems| filter: searchText | orderBy: ['-revenue', '-demandQuantity']" ng-hide="item.revenue == 'Insufficient Data' || item.demandQuantity == 'Insufficient Data'">
                 <td>{{item.id}}</td>
                 <td>{{item.name}}</td>
                 <td>{{item.buyPrice}} G</td>
