--- a/app/directives/home/home.template.html
+++ b/app/directives/home/home.template.html
@@ -12,8 +12,8 @@
             <th>Ratio</th>
             <th>Surplus Demand</th>
             <th>Demand Percentage</th>
-            <tr ng-repeat="item in home.allItems| filter: searchText | orderBy: ['ratio', '-demandQuantity']" ng-hide="item.revenue == 'Insufficient data' || item.demandQuantity == 'Insufficient data'"
-                ng-class="home.highlight(item.ratio)">
+            <tr ng-repeat="item in home.allItems| filter: searchText | orderBy: ['-revenue', 'ratio', '-demandQuantity']" ng-hide="item.revenue == 'Insufficient data' || item.demandQuantity == 'Insufficient data'"
+                ng-class="home.highlight(item.ratio, item.revenue, item.demandQuantity)">
                 <td>{{item.id}}</td>
                 <td>{{item.name}}</td>
                 <td>{{item.buyPrice}} G</td>
